# CSI1430_NerdleProject

./: CMakeLists.txt  DoesItCompute.cpp  DoesItCompute.h  EquationBuilder.cpp  EquationBuilder.h  Postguesscolorset.cpp  Postguesscolorset.h  SDL_Plotter.cpp  SDL_Plotter.h  color.h  constants.h  main.cpp  point.cpp  point.h  tile.cpp  tile.h  txtBox.h  txtDraw.cpp  txtDraw.h
